[metadata]
name = pyspatools
author = Holoplot
author_email = developers@holoplot.com
version = file: VERSION
description = A library for analyzing and visualizing spatial audio files
long_description = file: README.md
long_description_content_type = text/markdown
keywords = holoplot, visualization, audio, analysis
license = MIT
home_page = https://github.com/holoplot/pyspatools
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Multimedia :: Sound/Audio
    Topic :: Multimedia :: Sound/Audio :: Analysis

[options]
include_package_data = True
packages = find:
python_requires= >=3.7

install_requires = file: requirements.txt
